# sieve

./: .gitignore  Makefile.am  README.md  configure.ac  pbgen.sh  profile_halcon
casd/: Makefile.am  casd.conf  casd.cpp  channel.cpp  channel.h  csendimageprocessdatareq.hpp  csendweightreq.hpp  csetcamaraseqreq.hpp  rediscb.cpp  rediscb.h  ssendimageprocessdatarep.hpp  ssetcamaraseqrep.hpp
casd2/: Makefile.am  build_test_pyloader.sh  casd.conf  casd.cpp  cendbatchprocessreq.hpp  channel.cpp  channel.h  clearnsamplereq.hpp  cprocessfeaturereq.hpp  cregisterclientreq.hpp  cregistercpsdreq.hpp  csetprocessstatereq.hpp  dataman.cpp  dataman.h  dataman_new.cpp  dataman_new.h  fvalidateposreqp.hpp  pyloader.cpp  pyloader.h  rediscb.cpp  rediscb.h  sendbatchprocessrep.hpp  slearnsamplerep.hpp  sprocessfeaturerep.hpp  sprocessresult.hpp  sregisterclientrep.hpp  ssetprocessstaterep.hpp  test_dataman.cpp  test_pyloader.cpp
common/: Makefile.am  configfile.cpp  tcpclient.cpp  tcpserver.cpp
common/json/: Makefile.am  main.cpp
cpsd/: Makefile.am  cpsd.conf  cpsd.cpp  csendimageprocessdatareq.hpp  csetcamaraseqreq.hpp
cpsd2/: Makefile.am  cprocessfeaturereq.hpp  cpsd.conf  cpsd.cpp  cregistercpsdreq.hpp  csetprocessstatereq.hpp  fvalidateposreqp.hpp  sprocessfeaturerep.hpp  sregistercpsdrep.hpp
include/: common_def.h  configfile.h  net_base.h  packet_sync.h  protocol.h  protocolid.h  tcpclient.h  tcpserver.h
include/hiredis/adapters/: libuv.h
pb/: Makefile.am  netmessage.pb.cc  netmessage.pb.h
pbdef/: netmessage.proto
protocol/: cendbatchprocessreq  clearnsamplereq  cprocessfeaturereq  cqueryresultreq  cqueryresultreq.hpp  cregisterclientreq  cregistercpsdreq  csendimageprocessdatareq  csendimageprocessdatareq.hpp  csendweightreq  csendweightreq.hpp  csetcamaraseqreq  csetcamaraseqreq.hpp  csetprocessstatereq  fvalidateposreqp  sendbatchprocessrep  slearnsamplerep  sprocessfeaturerep  sprocessresult  squeryresultrep  sregisterclientrep  sregistercpsdrep  ssendimageprocessdatarep  ssendimageprocessdatarep.hpp  ssetcamaraseqrep  ssetcamaraseqrep.hpp  ssetprocessstaterep
queryd/: Makefile.am  cqueryresultreq.hpp  queryd.conf  queryd.cpp  queryd_client.cpp  rediscb.cpp  rediscb.h  squeryresultrep.hpp
shell/: cleandata.sh  dist.sh  sieve.sh  start.sh  stop.sh
test/: Makefile.am  test_tcpclient.cpp  test_tcpserver.cpp
